--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Django==3.1.3
 django-widget-tweaks==1.4.8
 gunicorn==20.0.4
 idna==2.10
+Pillow==8.0.1
 psycopg2-binary==2.8.6
 pytz==2020.4
 requests==2.25.0
